# electricity-supply-response

./: .gitignore  CLAUDE.md  DATA_AUDIT.md  DATA_SOURCES.md  METHODOLOGY.md  README.md  index.html  package-lock.json  package.json  pyproject.toml
assets/: index-B35g0-_l.js  index-BIJ0NDfN.js  index-BjbdrMYD.js  index-BuCVn7qF.js  index-BwT1fnWr.js  index-CBlAPgUZ.js  index-Czduupxb.js  index-DFghOtwc.js  index-DayAqlZd.js  index-xljxfT47.js
data/: audit.html  audit_all_data.csv  build_audit_html.py  build_dataset.py  build_from_csv.py  extract_2025_state.py  validate_data.py
data/sources/: ba_to_iso_mapping.py  generator_additions.py  peak_demand.py  queue_completion.py  wholesale_prices.py
data/verified/: iso_scatter_data.json  iso_scatter_data_2023.json  iso_scatter_data_2025_est.json  state_scatter_data.json  state_scatter_data_2023.json  state_scatter_data_2025_est.json
src/: App.tsx
src/components/: ChartControls.tsx  ChartToolbar.tsx  ElectricityScatter.tsx  HiddenDataTable.tsx  MethodologyNotes.tsx  QueueCompletionBar.tsx  ScatterTooltip.tsx  SourceDataTable.tsx
src/lib/: colors.ts  scales.ts  theme.ts  types.ts
