[project]
name = "electricity-supply-response-data"
version = "1.0.0"
description = "Data pipeline for electricity supply response scatter chart"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "requests>=2.31",
]

[project.scripts]
build-dataset = "data.build_dataset:main"
